--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,14 @@
 }
 
 body {
+    background-color: whitesmoke;
     color: #4a4a4a;
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
+}
+
+main h2 {
+    text-align: center;
 }
 
 /***********************************
@@ -27,12 +32,6 @@ body {
 .box {
     text-align: center;
     align-self: center;
-    width: 100%;
-}
-
-.header,
-.banner {
-    background-color: whitesmoke;
 }
 
 .header h1 {
@@ -46,16 +45,11 @@ body {
 .banner img,
 .portfolio img {
     align-self: center;
-    object-fit: cover;
+    width: 100%;
 }
 
 .banner img {
     width: 60%;
-    margin: 30px;
-}
-
-.portfolio img {
-    width: 90%;
 }
 
 .portfolio h2 {
@@ -68,7 +62,6 @@ body {
 }
 
 .nav li {
-    background-color: white;
     padding: 10px;
     margin: 5px;
     font-weight: bold;
@@ -81,9 +74,9 @@ body {
     align-items: center;
 }
 
-.box h3,
-.box p {
-    margin: 35px;
+.box  {
+    margin: 10px;
+    width: 300px;
 }
 
 
@@ -106,29 +99,48 @@ body {
     margin-bottom: 1.75em;
 }
 
-.links {
-    display: flex;
-    border-top: 1px solid #4a4a4a;
-    width: 80%;
-}
-
-.one{
-    align-items: flex-start;
-}
-
-.two {
-    align-items: flex-end;
-}
-
-
-
-
 /* MEDIA QUERIES */
 
-@media (min-width: 768x){
-    
+@media (min-width: 768px){
+    .banner {
+        display: flex;
+        flex-direction: row;
+    }
+    .portfolio {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    .banner {
+        flex-direction: row-reverse;
+    }
+    .box  {
+        width: 350px;
+    }
 }
 
 @media (min-width: 1024px){
-    
+    .header,
+    .banner {
+        display: flex;
+        flex-direction: row;
+    }
+    .header ul {
+        margin-left: 20em;
+    }
+    .nav {
+        display: flex;
+    }
+    .banner {
+        flex-direction: row-reverse;
+    }
+    .portfolio {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 }
