--- a/css/styles.css
+++ b/css/styles.css
@@ -28,33 +28,9 @@ main h2 {
 .name,
 .nav,
 .profile-picture,
-.banner-text,
 .box {
     text-align: center;
     align-self: center;
-}
-
-.header h1 {
-    padding: 0.8em;
-}
-
-.banner-text {
-    padding-bottom: 2em;
-}
-
-.banner img,
-.portfolio img {
-    align-self: center;
-    width: 100%;
-}
-
-.banner img {
-    width: 60%;
-}
-
-.portfolio h2 {
-    padding: 2em;
-    text-align: center;
 }
 
 .nav {
@@ -67,11 +43,32 @@ main h2 {
     font-weight: bold;
 }
 
+.header {
+    margin: 3em;
+}
+
 .banner {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+}
+
+.profile-picture, 
+.banner-text {
+    padding: 5px;
+}
+
+.banner img {
+    width: 60%;
+}
+
+.portfolio img {
+    width: 100%;
+}
+
+.portfolio h2 {
+    padding: 2em;
+    text-align: center;
 }
 
 .box  {
@@ -127,8 +124,12 @@ main h2 {
         display: flex;
         flex-direction: row;
     }
-    .header ul {
-        margin-left: 20em;
+    .header {
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .name {
+       margin-right: auto;
     }
     .nav {
         display: flex;
@@ -137,10 +138,17 @@ main h2 {
         flex-direction: row-reverse;
     }
     .portfolio {
+        flex-wrap: wrap;
         display: flex;
-        flex-direction: row;
         align-items: center;
         justify-content: center;
-        flex-wrap: wrap;
     }
+    .box  {
+        width: 300px;
+    }
+
+    .profile-picture, 
+    .banner-text {
+    padding: 40px;
+}
 }
