--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,9 @@
 body {
     background-color: whitesmoke;
     color: #4a4a4a;
+    font-family: 'Comfortaa';
     font-family: 'Open Sans', sans-serif;
-    font-size: 1em;
+    font-size: 16px;
     line-height: 1.5;
 }
 
@@ -60,7 +61,7 @@ main h2 {
     text-align: center;
 }
 
-.banner img {
+.profile-picture {
     width: 60%;
 }
 
@@ -82,6 +83,14 @@ main h2 {
     width: 300px;
 }
 
+.box h3 {
+   font-size: 1.4em;
+}
+
+.box p {
+    padding-bottom: 25px;
+}
+
 .box h3,
 .box p {
     padding-top: 1em;
@@ -94,7 +103,6 @@ main h2 {
 .footer {
     display: flex;
     flex-direction: column;
-    background-color: whitesmoke;
     text-align: center;
 }
 
@@ -103,8 +111,7 @@ main h2 {
 }
 
 .footer p {
-    padding-top: 1em;
-    padding-bottom: 2em;
+    padding: 1em 0 2em 0;
 }
 
 .footer-email {
@@ -175,17 +182,25 @@ main h2 {
         display: inherit;
     }
     /* I learned that you can reinitialize the initial display when a certain breakpoint is triggered */
-
+    .footer p {
+        width: 60%;
+        align-self: center;
+    }
     .footer-totop {
         display: none;
     }
     .footer-nav {
+        padding-left: 30px;
+        padding-right: 30px;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
     .footer-name {
         margin-right: auto;
+    }
+    .profile-picture {
+
     }
 }
 
@@ -198,6 +213,7 @@ main h2 {
     .header {
         flex-wrap: wrap;
         justify-content: space-between;
+        padding-right: 30px;
     }
     .name {
         padding-left: 25px;
@@ -205,6 +221,9 @@ main h2 {
     }
     .nav {
         display: flex;
+    }
+    .profile-picture {
+        margin-right: 20px;
     }
     .banner {
         margin-top: -10px;
@@ -218,6 +237,10 @@ main h2 {
     }
     .box  {
         width: 300px;
+    }
+    .footer p {
+        width: 45%;
+        align-self: center;
     }
     .footer-nav {
         margin-bottom: -20px;
