--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 body {
     margin: 0 auto;
     max-width: 1024px;
-    background-color: whitesmoke;
+    background-color: white;
     font-family: 'Open Sans'; 
     color: #4a4a4a;
     font-size: 16px;
@@ -111,7 +111,14 @@ main h2 {
     align-items: center;
 }
 .skills img {
-    width: 90%;
+    object-fit: cover;
+    height: 5vh;
+    padding: 20px;
+}
+
+.skills figure {
+    display: flex;
+    flex-direction: column;
 }
 
 /***********************************
@@ -227,7 +234,12 @@ main h2 {
         align-items: center;
     }
     .skills img {
-        width: calc(50% - 20px);
+        object-fit: cover;
+        height: 7.5vh;
+    }
+    .skills figure {
+        display: flex;
+        flex-direction: row;
     }
 }
 
@@ -286,5 +298,9 @@ main h2 {
     }
     .footer-nav {
         margin-bottom: -20px;
+    }
+    .skills img {
+        object-fit: cover;
+        height: 10vh;
     }
 }
