--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,12 @@ main h2 {
 
 /* MEDIA QUERIES */
 @media (min-width: 768px){
+    .footer-home,
+    .footer-portfolio,
+    .footer-contact {
+        display: inline-block;
+    }
+/* I learned that you can reinitialize the initial display when a certain breakpoint is triggered */
     .nav {
         display: flex;
         flex-direction: row;
@@ -189,7 +195,6 @@ main h2 {
         justify-content: flex-start;
         padding: 0 15px 0 20px;
     }
-    
     .banner img {
         width: 35vw;
         padding-right: 25px;
@@ -204,12 +209,6 @@ main h2 {
     .box p {
         padding-bottom: 25px;
     }
-    .footer-home,
-    .footer-portfolio,
-    .footer-contact {
-        display: inline-block;
-    }
-    /* I learned that you can reinitialize the initial display when a certain breakpoint is triggered */
     .footer p {
         width: 60%;
         align-self: center;
@@ -282,7 +281,7 @@ main h2 {
     .box  {
         flex-basis: calc(33.333% - 20px);
     }
-    /* same thing here, instead of adding padding and margin use flex */
+    /* same thing here, instead of adding padding and margin use flex-basis */
     .skills {
         display: flex;
         flex-direction: column;
