--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,8 @@ body {
 }
 
 p {
-    font-size: 1em;
-    padding: 5px;
+    font-size: .95em;
+    padding: 0 5px;
 }
 
 a {
@@ -98,7 +98,6 @@ h4 {
 }
 
 .portfolio img {
-    padding-top: .8em;
     width: 100%;
 }
 
@@ -114,7 +113,7 @@ h4 {
 .box  {
     margin: 10px;
     width: 300px;
-    min-height: 400px;
+    min-height: 350px;
 }
 
 .box h3 {
@@ -157,7 +156,7 @@ h4 {
 
 .footer p {
     margin: 0 auto;
-    padding: 1em 0 2em 0;
+    padding: 1.25em;
 }
 
 .footer-email {
@@ -228,7 +227,7 @@ h4 {
     }
 
     .box p {
-        padding: 0 1.8em;
+        padding: 0 2.3em;
     }
 
     .footer p {
@@ -263,6 +262,9 @@ h4 {
         display: flex;
         flex-direction: row;
         height: 15vh;
+    }
+    .portfolio img {
+        padding-top: 1em;
     }
 }
 
